Chap4/chap4-2-Prefix-Based-Routing/gateway-vs-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: helloworld-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld-external
spec:
  hosts:
  - "*"
  gateways:
  - helloworld-gateway
  http:
  - match:
    - uri:
        prefix: /experimental
    - uri:
        prefix: /canary      
    route:
    - destination:
        host: helloworld.testcanary.svc.cluster.local
        subset: v2
  - match:
    - uri:
        prefix: /hello
    route:
    - destination:
        host: helloworld.testcanary.svc.cluster.local
        subset: v1

---

kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: helloworld
spec:
  host: helloworld.testcanary.svc.cluster.local
  subsets:
    - labels:
        version: v1
      name: v1
    - labels:
        version: v2
      name: v2
